@@ -1,4 +1,4 @@
-$Id: History,v 1.10 2000-06-06 13:18:51 gcosmo Exp $
+$Id: History,v 1.11 2000-09-11 11:09:54 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+September 11, 2000   G.Cosmo               geommng-V02-00-00
+- G4SolidStore.cc: fixed bug in destructor causing memory corruption at
+  application exit when Boolean solids are involved (bug #154).
 
 June 06, 2000   G.Cosmo                    geommng-V01-01-00
 
